# pyprojecttoenv

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyproject_toml_to_environment_file.py  setup.py
.github/workflows/: codeql.yml
